# gematria-trainer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  implementation-epic-structure.md  implementation-plan.md  justfile  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: deploy.yml  release.yml
hooks/: pre-commit  pre-push
src/: app.py  build.py
src/data/: examples.json  gematria.py  letters.csv
src/templates/: base.html  index.html  sw.js  sw.js.jinja2
src/templates/components/: about.html  flashcard.html  placement.html  progress.html  reference.html  settings.html  shortcuts.html  splash.html  welcome.html
static/css/: input.css
static/fonts/: LICENSE
static/js/: app.js  card-selection.js  card-state.js  gematria.js  generator.js  levels.js  placement.js  progression.js  registry.js  settings.js  spaced-repetition.js  storage.js  tiers.js
tests/: test_app.py  test_build.py  test_card_selection.py  test_card_state.py  test_data.py  test_examples.py  test_gematria_systems.py  test_levels.py  test_progression.py  test_spaced_repetition.py  test_tiers.py
tests/e2e/: conftest.py  test_card_randomization.py
tests/js/: test-app.js  test-card-selection.js  test-card-state.js  test-gematria.js  test-generator.js  test-levels.js  test-placement.js  test-progression.js  test-settings.js  test-spaced-repetition.js  test-storage.js  test-tiers.js
tests/js/helpers/: load-modules.js
