[project]
name = "gematria-trainer"
version = "0.1.0"
description = "Web-based interactive flashcard app for teaching Hebrew Gematria"
requires-python = ">= 3.13"
dependencies = [
    "flask",
    "frozen-flask",
    "python-dotenv",
    "structlog",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
