[project]
name = "gematria-trainer"
version = "0.1.0"
description = "Web-based interactive flashcard app for teaching Hebrew Gematria"
requires-python = ">= 3.13"
dependencies = [
    "flask",
    "frozen-flask",
    "python-dotenv",
    "structlog",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-playwright",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--ignore=tests/e2e"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/test_data.py" = ["RUF001"]
"tests/test_examples.py" = ["RUF001"]
"tests/test_gematria_systems.py" = ["RUF001", "RUF012", "B905"]
"tests/test_levels.py" = ["RUF001", "RUF002"]
"tests/test_spaced_repetition.py" = ["RUF059"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
